[package]

name = "ostrov"
description = "R6RS Scheme implementation"
homepage = "https://github.com/razielgn/ostrov"
repository = "https://github.com/razielgn/ostrov"
readme = "README.md"
version = "0.0.1"
keywords = ["language", "lisp", "scheme"]
license = "MIT"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]

[lib]
name = "ostrov"
path = "src/ostrov/lib.rs"
doctest = false
test = false

[[bin]]
name = "ostrov"
test = false
doc = false

[[test]]
name = "tests"
