[package]

name = "ostrov"
description = "R6RS Scheme implementation"
homepage = "https://github.com/razielgn/ostrov"
repository = "https://github.com/razielgn/ostrov"
readme = "README.md"
version = "0.0.1"
keywords = ["language", "lisp", "scheme"]
license = "MIT"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]

[lib]
name = "ostrov"
path = "src/ostrov/lib.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "ostrov"
bench = false
doc = false
test = false

[[test]]
name = "tests"
bench = false
doc = false

[[bench]]
name = "benchmarks"
doc = false
test = false

[dependencies]
peg = "^0.2.2"
