[package]
name = "ostrov"
description = "R6RS Scheme implementation"
homepage = "https://github.com/razielgn/ostrov"
repository = "https://github.com/razielgn/ostrov"
readme = "README.md"
version = "0.0.1"
keywords = ["language", "lisp", "scheme"]
license = "MIT"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
autotests = false

[lib]
name = "ostrov"
path = "src/ostrov/lib.rs"
bench = false
doctest = false

[[bin]]
name = "ostrov"
bench = false
doc = false
test = false

[[test]]
name = "tests"
bench = false
doc = false

[[bench]]
name = "benchmarks"
doc = false
test = false

[profile.release]
lto = true

[dependencies]
nom = "4.0"
nom_locate = "0.3"
